--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@radix-ui/react-toast": "^1.2.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.9.4",
     "lucide-react": "^0.506.0",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-webcam": "^7.2.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
